--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* style.css */
-
 * {
     font-family: sans-serif;
     margin: 0;
@@ -219,18 +217,27 @@ main {
 }
 
 @media (max-width: 480px) {
-    i {
-        margin-left: 90%;
+    #menu-icon { display: inline;
+        font-size: 24px;
+        cursor: pointer;
+        margin-left: 85%;
+    }
+    
+    /* Adjustments for mobile view */
+    header {
+        flex-direction: column;
+        height: auto;
+        padding: 10px;
     }
 
-    #menu-icon {
-        display: block;
+    header .logo {
+        font-size: 20px;
     }
 
     nav ul {
         margin-left: 10%;
         border-radius: 10px;
-        display: none;
+        display: none; /* Initially hide the menu */
         position: absolute;
         top: 60px;
         background-color: #0414f7;
@@ -241,13 +248,12 @@ main {
     }
 
     nav ul.show {
-        display: flex;
+        display: flex; /* Show the menu when 'show' class is added */
         flex-direction: column;
         gap: 10px;
     }
 
     nav ul li .dropdown-menu {
-        
         position: relative;
         top: 0;
         left: 0;
